header and body basic structure

--- a/index.html
+++ b/index.html
@@ -4,6 +4,60 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Given design</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <ul class="nav__list">
+        <li><a href="#">Hem</a></li>
+        <li><a href="#">Om</a></li>
+        <li><a href="#">Kontakt</a></li>
+      </ul>
+
+      <div class="header__container">
+        <h1 class="header__title">Welcome to nature</h1>
+        <p class="header__text">A journey through time and sheep</p>
+        <p class="header__text">
+          To see how ...cotton ... is mage, made I mean...
+        </p>
+      </div>
+
+      <a class="arrow__container" href="#main"
+        ><i id="arrow--down" class="fa-solid fa-arrow-down"></i
+      ></a>
+    </header>
+
+    <main id="main">
+      <h2 class="main__title">Träffa laget</h2>
+
+      <p class="main__name">Rakib</p>
+      <div class="main__pic--rakib"></div>
+      <p class="main__description">
+        <i style="font-size: 2rem" class="fa">&#xf10e;</i>Rakib är vår vassaste
+        node-utvecklare och håller ständigt ett öga på nya tekniker
+      </p>
+
+      <p class="main__name">Alexandra</p>
+      <div class="main__pic--alexandra"></div>
+      <p class="main__description">
+        "Alexandra håller reda på alla överallt och ser till att det flyter
+      </p>
+
+      <p class="main__name">Lasse</p>
+      <div class="main__pic--lasse"></div>
+      <p class="main__description">"Gör övriga saker... mestadels...</p>
+
+      <p class="main__name">Sebastian</p>
+      <div class="main__pic--sebastian"></div>
+      <p class="main__description">
+        "En av våra utbildare som har stor erfarenhet av ganska många saker
+      </p>
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
