fixed footer and main for tablet, changed arrow icons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <header id="header">
+    <header id="home">
       <div class="header__div">
         <input class="side-menu" type="checkbox" id="side-menu" />
         <label class="hamb" for="side-menu"
@@ -19,9 +19,9 @@
         ></label>
         <nav class="nav">
           <ul class="nav__list">
-            <li><a href="#header">Hem</a></li>
-            <li><a href="#main">Om</a></li>
-            <li><a href="#footer">Kontakt</a></li>
+            <li class="nav__list__item"><a href="#home">Hem</a></li>
+            <li class="nav__list__item"><a href="#about">Om</a></li>
+            <li class="nav__list__item"><a href="#contact">Kontakt</a></li>
           </ul>
         </nav>
       </div>
@@ -34,84 +34,93 @@
         </p>
       </div>
 
-      <a class="arrow__container" href="#main"
-        ><i id="arrow--white" class="fa-solid fa-arrow-down"></i
+      <a class="arrow--white" href="#about"
+        ><i class="fa-solid fa-circle-down"></i
       ></a>
     </header>
 
-    <main id="main">
+    <main id="about">
       <h2 class="main__title">Träffa laget</h2>
 
-      <p class="main__name">Rakib</p>
-      <div class="main__pic--rakib"></div>
-      <p class="main__description">
-        <i class="fa-solid fa-quote-right"></i> Rakib är vår vassaste
-        node-utvecklare och håller ständigt ett öga på nya tekniker
-      </p>
+      <section class="main__team__wrapper">
+        <article class="main__team">
+          <p class="main__name">Rakib</p>
+          <div class="main__pic--rakib"></div>
+          <p class="main__description">
+            <i class="fa-solid fa-quote-right" id="quote"></i> Rakib är vår
+            vassaste node-utvecklare och håller ständigt ett öga på nya tekniker
+          </p>
+        </article>
 
-      <p class="main__name">Alexandra</p>
-      <div class="main__pic--alexandra"></div>
-      <p class="main__description">
-        <i class="fa-solid fa-quote-right"></i>
-        Alexandra håller reda på alla överallt och ser till att det flyter
-      </p>
+        <article class="main__team">
+          <p class="main__name">Alexandra</p>
+          <div class="main__pic--alexandra"></div>
+          <p class="main__description">
+            <i class="fa-solid fa-quote-right" id="quote"></i>
+            Alexandra håller reda på alla överallt och ser till att det flyter
+          </p>
+        </article>
 
-      <p class="main__name">Lasse</p>
-      <div class="main__pic--lasse"></div>
-      <p class="main__description">
-        <i class="fa-solid fa-quote-right"></i>Gör övriga saker... mestadels...
-      </p>
+        <article class="main__team">
+          <p class="main__name">Lasse</p>
+          <div class="main__pic--lasse"></div>
+          <p class="main__description">
+            <i class="fa-solid fa-quote-right" id="quote"></i>Gör övriga
+            saker... mestadels ...
+          </p>
+        </article>
 
-      <p class="main__name">Sebastian</p>
-      <div class="main__pic--sebastian"></div>
-      <p class="main__description">
-        <i class="fa-solid fa-quote-right"></i>
-        En av våra utbildare som har stor erfarenhet av ganska många saker
-      </p>
+        <article class="main__team">
+          <p class="main__name">Sebastian</p>
+          <div class="main__pic--sebastian"></div>
+          <p class="main__description">
+            <i class="fa-solid fa-quote-right" id="quote"></i>
+            En av våra utbildare som har stor erfarenhet av ganska många saker
+          </p>
+        </article>
+      </section>
 
-      <a class="arrow__container" href="#footer"
-        ><i id="arrow--black" class="fa-solid fa-arrow-down"></i
+      <a class="arrow--black" href="#contact"
+        ><i class="fa-solid fa-circle-down"></i
       ></a>
     </main>
 
-    <footer class="footer" id="footer">
-      <section class="footer__wrapper">
-        <article class="footer__adress">
-          <p>Tegel Consulting AB</p>
-          <p>Agatavägen 18</p>
-          <p>168 60 Bromma</p>
-        </article>
+    <footer class="footer" id="contact">
+      <article class="footer__adress">
+        <p>Tegel Consulting AB</p>
+        <p>Agatavägen 18</p>
+        <p>168 60 Bromma</p>
+      </article>
 
-        <article class="footer__contact">
-          <p>info at tegelconsulting.se</p>
-          <p>070-123 456 78</p>
-        </article>
+      <article class="footer__contact">
+        <p>info at tegelconsulting.se</p>
+        <p>070-123 456 78</p>
+      </article>
 
-        <article class="footer__socials">
-          <article class="socials__icons">
-            <i
-              id="icon--instagram"
-              class="fa-brands fa-instagram"
-              style="color: #ffffff"
-            ></i>
-            <i
-              id="icon--twitter"
-              class="fa-brands fa-twitter"
-              style="color: #ffffff"
-            ></i>
-            <i
-              id="icon--facebook"
-              class="fa-brands fa-facebook-f"
-              style="color: #ffffff"
-            ></i>
-          </article>
-          <article class="socials__name">
-            <p>Instagram</p>
-            <p>Twitter</p>
-            <p>Facebook</p>
-          </article>
+      <article class="footer__socials">
+        <article class="socials__icons">
+          <i
+            id="icon--instagram"
+            class="fa-brands fa-instagram"
+            style="color: #ffffff"
+          ></i>
+          <i
+            id="icon--twitter"
+            class="fa-brands fa-twitter"
+            style="color: #ffffff"
+          ></i>
+          <i
+            id="icon--facebook"
+            class="fa-brands fa-facebook-f"
+            style="color: #ffffff"
+          ></i>
         </article>
-      </section>
+        <article class="socials__name">
+          <p>Instagram</p>
+          <p>Twitter</p>
+          <p>Facebook</p>
+        </article>
+      </article>
     </footer>
   </body>
 </html>
