fixed footer and main for tablet, changed arrow icons, made mixins for flex and  arrows

--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
   </head>
   <body>
     <header id="home">
-      <div class="header__div">
-        <input class="side-menu" type="checkbox" id="side-menu" />
-        <label class="hamb" for="side-menu"
-          ><span class="hamb-line"></span
+      <div class="header__nav__wrapper">
+        <input class="header__checkbox" type="checkbox" id="header__checkbox" />
+        <label class="header__hamburger" for="header__checkbox"
+          ><span class="header__hamburger__line"></span
         ></label>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__list__item"><a href="#home">Hem</a></li>
-            <li class="nav__list__item"><a href="#about">Om</a></li>
-            <li class="nav__list__item"><a href="#contact">Kontakt</a></li>
+            <li class="nav__list__item">
+              <a class="nav__list__item__link" href="#home">Hem</a>
+            </li>
+            <li class="nav__list__item">
+              <a class="nav__list__item__link" href="#about">Om</a>
+            </li>
+            <li class="nav__list__item">
+              <a class="nav__list__item__link" href="#contact">Kontakt</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -116,9 +122,9 @@
           ></i>
         </article>
         <article class="socials__name">
-          <p>Instagram</p>
-          <p>Twitter</p>
-          <p>Facebook</p>
+          <a class="socials__link" href="#">Instagram</a>
+          <a class="socials__link" href="#">Twitter</a>
+          <a class="socials__link" href="#">Facebook</a>
         </article>
       </article>
     </footer>
